WikiaMobile: If name of wikia page is too long page user can scroll horizontally page (BugId: 46600)
git-svn-id: svn+ssh://svn.wikia-code.com/svn/wikia/trunk@59567 e846bd91-c042-42a7-a218-4b65e2c1904d

--- a/extensions/wikia/WikiaMobile/css/WikiaMobile.scss
+++ b/extensions/wikia/WikiaMobile/css/WikiaMobile.scss
@@ -66,13 +66,13 @@ body {
 
 #wkMainCntHdr {
 	border-bottom: 1px solid $border-color;
-	padding: $page-padding;
+	padding: $page-padding 50px $page-padding $page-padding;
 	position: relative;
 
 	h1{
 		float: left;
-		margin:0 50px 0 0;
-		padding:0;
+		max-width: 100%;
+		margin: 0;
 	}
 
 	.wkShr{
